HIP-1195 Introduce Hook Storage REST API (#12383)
This PR provides Implementation of the Hook Storage REST API according to the specification in the hiero-hooks.md :

```
GET /api/v1/accounts/{idOrAliasOrEvmAddress}/hooks/{hook_id}/storage
```

Returns the storage state for a hook (similar to `/api/v1/contracts/{contractIdOrAddress}/state`):

- **Without timestamp parameter**: Returns current state from `hook_storage` table
- **With timestamp parameter**: Returns historical state from `hook_storage_change` table

Response format:

```json
{
  "hook_id": 1,
  "owner_id": "0.0.123",
  "storage": [
    {
      "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "value": "0x00000000000000000000000000000000000000000000000000000000000003e8",
      "timestamp": "1726874345.123456789"
    }
  ],
  "links": {
    "next": "/api/v1/accounts/0.0.123/hooks/1/storage?key=gt:0x0000000000000000000000000000000000000000000000000000000000000000&limit=1"
  }
}
```

#### Query Parameters

| Parameter   | Type    | Description                                                                                                                                                                                                                                                                                                                             | Default | Validation                                                                             |
| ----------- | ------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- | -------------------------------------------------------------------------------------- |
| `key`       | string  | Filter storage entries by storage key. Supports co